docs/styles.css
/* css styles */

.navbar {
	border-bottom: 1px solid #303d64;
	margin-bottom: 1em;
}

code {
  background-color: #e5f0fb !important;
}

pre.sourceCode, pre {
	border: 1px solid #a2a2a2;
}

p, a, li, .callout-title-container, table {
	color: #303d64 !important;
}

#title-block-header {
	text-align: center;
}

.tippy-content {
	border: 1px solid #a2a2a2;
	border-radius: 2%;
	background-color: #303d64;
}

.tippy-content > p {
	color: white !important;
}

.callout {
	border-right: 1px solid #a2a2a2 !important;
	border-bottom: 1px solid #a2a2a2 !important;
}

.callout-header {
	border-bottom: 1px solid #a2a2a2 !important;
	border-top: 1px solid #a2a2a2 !important;
}

h1 {
	margin-top: 0rem !important;
}

header {
    nav {
        ul {
            &.navbar-nav {
                li {
                    a {
                        border-bottom: 3px solid transparent;
                        transition: border-bottom 0.5s;
                        &:hover, &.active {
                            border-color: #4b5f9b;
														color: #4b5f9b !important;
                        }
                    }
                }
            }
        }
    }
}

